--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "msv-data-validator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "data validation library",
   "main": "index.js",
   "scripts": {
@@ -9,6 +9,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/ms-vladyslav/data-validator.git"
+  },
+  "dependencies": {
+    "msv-task-scheduler": "1.0.0"
   },
   "author": "",
   "license": "ISC",
